Adicionei a tela login/cadastro e ajustei a função de darkmode para guardar as preferências do usúario, porém ainda falta ajustar as cores da tela login/cadastro no dark mode e resolver bug do botão na tela inicial

--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 /* font-family: 'Inter', sans-serif; */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
 *{
     padding: 0;
     margin: 0;
     font-family: 'Inter', sans-serif;
     color: #151515;
+    text-decoration: none;
 }
 button{
     background-color: #F5F5F5;
@@ -27,6 +29,7 @@ button{
 body{
     background-color: #F5F5F5;
     height: 100vh;
+    overflow: hidden;
 }
 
 /* MENU */
@@ -123,3 +126,188 @@ h4 .destaque {
     width: 100%;
     height: 100%;
 }
+
+/* CONTEUDO LOGIN */
+.div_login{
+    width: 100%;
+    height: 96%;
+}
+.div_login .container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction:column;
+}
+.div_login .container .btn_dark_mode{
+    height:7%; 
+    width: auto;
+    align-self: end;
+}
+.div_login .container .btn_dark_mode .src_icon{
+    width: 100%;
+    height: auto;
+}
+.div_aviso_login{
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    text-align: center;
+}
+.div_aviso_login h1{
+    font-size: 45px;
+    font-weight: bold;
+    color: #151515;
+}
+.div_aviso_login h5{
+    font-size: 20px;
+    font-weight: 500;
+    color: #151515;
+}
+.card_login_cadastro{
+    width: 35%;
+    height: 60%;
+    border-radius: 10px;
+    background-color: #151515;
+    margin: auto;
+    box-shadow: 15px 10px 0px #EB1C23;
+    display: flex;
+}
+.card_login_cadastro .container{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+.card_login_cadastro .container h1{
+    color: #F5F5F5;
+    margin-top: 3%;
+    font-size: 30px;
+}
+.card_login_cadastro .container h5{
+    color: #F5F5F5;
+}
+.div_input{
+    width: 60%;
+    height: 10%;
+    border-radius: 11px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #EB1C23;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+}
+.div_img_input{
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    width: 15%;
+    height: 100%;
+    background-color: #EB1C23;
+    float: left;
+}
+.div_img_input img{
+    width: auto;
+    height: 90%;
+    margin-top: 5%;
+}
+.div_input input{
+    width: 70%;
+    height: 100%;
+    float: left;
+    margin-left: 5%;
+    background-color: #151515;
+    border-style: none;
+    color:#ffffff;
+    outline: 0;
+    font-size: 20px;
+    font-weight: medium;
+}
+.div_input input::placeholder{
+    color: #DEDEDE;
+}
+.card_login_cadastro .container button{
+    background-color: #151515;
+    width: 20%;
+    height:9%;
+    border-radius: 10px;
+    color: #EB1C23;
+    border-width: 2px;
+    margin-top: 7%;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;    
+    transition: ease-in 0.35s ;
+}
+.card_login_cadastro button:hover{
+    background-color: #EB1C23;
+    color: #F5F5F5;
+    transition: ease-in 0.35s ;
+    cursor: pointer;
+}
+.card_login_cadastro button .destaque_btn:hover{
+    color: #F5F5F5;
+}
+.destaque_btn{
+    color: #EB1C23;
+    font-size: 18px;
+    font-weight: normal;
+}
+.card_login_cadastro .container button h5{
+    font-size: 13px;
+    width: 100%;
+    font-weight: normal;
+}
+.div_login .container a h5{
+    font-weight: normal;
+    margin-top: 5%;
+    font-size: 13px;
+}
+#link_cadastro:hover{
+    background-color: #151515;
+}
+.container2{
+    float: left;
+    width: 50%;
+    height: 100%;
+    display: none;
+    opacity: 0;
+    animation: opacidade 3s ;
+    border-left: solid #EB1C23 2px;
+    text-align: center;
+}
+.container2 h1{
+    color: #F5F5F5;
+    margin-top: 3%;
+    font-size: 30px;
+}
+.container2 button{
+    background-color: #151515;
+    border-radius: 10px;
+    border-width: 2px;
+    margin-top: 7%;
+    width: 25%;
+    height:9%;
+}
+@keyframes opacidade {
+    0%   { opacity: 0; }
+    18%   { opacity: 0; }
+    100% { opacity: 1; }
+  }
+
+.div_porco_aranha{
+    margin-left: 80%;
+    margin-top: 25%;
+    position: absolute;
+    width: 20%;
+    height: 50%;
+}
+.div_porco_aranha img{
+    margin-left: 35%;
+    width: 100%;
+    height: 80%;
+}
+/* .div_login .btn_dark_mode img {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    background-color: red;
+} */
